# hu_sp24_719_mpi-solution

./: .gitignore  CMakeLists.txt
a04_c_cpp_examples/: CMakeLists.txt  adjacency_matrix_01_4x4_int.txt  c_cpp_examples.cpp  run_a04_c_cpp_examples.sh
a04_simpsons_floyd/: CMakeLists.txt  run_a04_simpsons_floyd.sh  simpsons_floyd.c
a05_QMPI/: CMakeLists.txt  MyMPI.c  MyMPI.h  QMPI.cpp  QMPI.h  main.cpp  run_a05_QMPI.sh
a05_myMPI/: CMakeLists.txt  MyMPI.c  adjacency_matrix_4_x_4.txt  main.c  notes_1.txt  run_a05_myMPI.sh
c_cpp_examples/: CMakeLists.txt  MemoryExample.h  adjacency_matrix_01_4x4_float.txt  c_cpp_examples.cpp
mpi-sample/: CMakeLists.txt  Example_1.cpp  Example_3.cpp  Example_4.cpp  Example_5.cpp  Examples.h  adjacency_matrix_01_4x4_int.txt  floyds_algorithm.cpp  mpi-sample.cpp  quinn_mpi.cpp  read_adjacency_matrix.cpp  run_mpi_sample.sh
simpsons_floyd/: CMakeLists.txt  adjacency_matrix_02_8x8.txt  simpsons_floyd.c
